# uncertainty-aware-sql-scheduling

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.api  Makefile  alembic.ini  decision_app.py  docker-compose.yml  gunicorn.conf.py  individual_test_results.txt  init_db.py  pyproject.toml  readme.md  reproduce_strategies.py  requirements.txt  run_all_tests.py  run_individual_tests.py  setup.cfg  setup.py  setup.sh  tasks.ps1  test_results_full.txt  verify_celery.py  verify_db.py  verify_external_api.py
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1c5ace02cb5f_add_uncertainty_columns.py
benchmarks/: run_tests.py
data/: carbon_history.json  demo.db
docs/adr/: 0001-architecture.md
scheduler/: worker.py
src/: api.py
src/core/: compiler.py  engine.py  executor.py  profiler.py  run_engine.py
src/db/: database.py  models.py
src/energy_ml/: energy.py  main.py  train.py
src/evaluation/: analyze_results.py  run_experiments.py
src/evaluation/benchmarks/: tpch_queries.py
src/monitoring/: metrics.py
src/optimizer/: carbon_api.py  selector.py
src/scheduler/: app.py  tasks.py  worker.py
src/tools/: bench_one.py  explain.py
src/utils/: query_parser.py
tests/: test_compiler.py  test_executor.py  test_profiler.py  test_query_parser.py  test_smoke.py  test_version.py
