[metadata]
name = energy-ml-project
version = 0.1.0
description = Carbon-aware query engine (dev)
author = Your Name

[options]
# tell setuptools that packages live under the src/ directory
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src
